# drops

src/SarahTest/: CMakeLists.txt  FehlerSchiefeEllipse.cpp  L2schiefeMoehre.cpp  massenerhaltung.cpp  matrixaccu.cpp  matrixaccu.h  myadap.cpp  myadap.h  myfespace.cpp  myfespace.h  mygeometry.cpp  mygeometry.h  myquadratur.cpp  myquadratur.h  myquadratur.tpp  tropfen.cpp  vtkoutput.cpp  vtkoutput.h
src/geom/: multigrid.cpp  multigrid.h  simplex.h
src/levelset/: surfacetension.h
src/misc/: utils.h
src/num/: hypre.cpp  hypre.h
src/osmosis/: tests.cpp
src/partests/: dist_exchange.cpp  dist_interface.cpp  dist_modify.cpp  dist_remotedatatest.cpp  dist_sendtetraofbrick.cpp  dist_simplexsend.cpp  dist_streamtest.cpp
src/tests/: quad5_2D.cpp  reparamtest.cpp
src/transport/: localsetups.cpp
